[risk=low][RW-14368] Use Task Queues for checkPersistentDisks (#9124)
* rm blockSize everywhere
* simplify mapper
* TQSafe types